[package]
name = "locale"
version = "0.2.2"
description = "Library for basic localisation. Warning: Major rewrite pending for 0.3!"
authors = [
    "Ben S <ogham@bsago.me>",
    "Jan Hudec <bulb@ucw.cz>",
]
license = "MIT"

documentation = "https://docs.rs/locale/"
repository = "https://github.com/rust-locale/rust-locale/"
readme = "README.md"
keywords = ["i18n", "g12n", "l10n"]

[dependencies]
libc = "0.2"

[package.metadata.release]
upload-doc = true
