[package]
name = "locale"
version = "0.3.0-pre"
description = "Library for basic localisation. Warning: Major rewrite pending for 0.3!"
authors = [
    "Ben S <ogham@bsago.me>",
    "Jan Hudec <bulb@ucw.cz>",
]
license = "MIT"

documentation = "https://docs.rs/locale/"
repository = "https://github.com/rust-locale/rust-locale/"
readme = "README.md"
keywords = ["i18n", "g12n", "l10n"]

exclude = [
    "scripts/**/*",
]

[dependencies]
lazy_static = "0.2"
libc = "0.2"
locale_config = ">= 0.2.1"
nom = "3.0"
unicode-segmentation = "1.1.0"
unicode-width = "0.1.4"

[package.metadata.release]
upload-doc = true
